--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "winston": "^3.17.0"
   }
 }
